# zsnap

./: pyproject.toml  test_zsnap.py  zsnap  zsnap.py
systemd/: zsnap.env  zsnap.service  zsnap.timer
